force-app/main/default/objects/Work_Order_Trigger_Configuration__mdt/Work_Order_Trigger_Configuration__mdt.object-meta.xml
<CustomObject>
    <description>List of quality control record types per work order job type</description>
    <label>Work Order Trigger Configuration</label>
    <pluralLabel>Work Order Trigger Configurations</pluralLabel>
</CustomObject>