force-app/main/default/objects/Work_Order_Trigger_Configuration__mdt/fields/Allow_Duplicates__c.field-meta.xml
<CustomField>
    <fullName>Allow_Duplicates__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Allows the work order trigger to create a quality control record every time without checking for duplicates</description>
    <inlineHelpText>Allows the work order trigger to create a quality control record every time without checking for duplicates</inlineHelpText>
    <label>Allow Duplicates</label>
    <type>Checkbox</type>
</CustomField>