force-app/main/default/objects/Work_Order_Trigger_Configuration__mdt/fields/Community_Field_to_Verify__c.field-meta.xml
<CustomField>
    <fullName>Community_Field_to_Verify__c</fullName>
    <description>Name of the community picklist field that should be checked &quot;Yes&quot; for the trigger to create the QC record</description>
    <inlineHelpText>Name of the community picklist field that should be checked &quot;Yes&quot; for the trigger to create the QC record</inlineHelpText>
    <label>Community Field to Verify</label>
    <length>255</length>
    <type>Text</type>
</CustomField>