force-app/main/default/objects/Work_Order_Trigger_Configuration__mdt/fields/Day_Count_Field_Name__c.field-meta.xml
<CustomField>
    <fullName>Day_Count_Field_Name__c</fullName>
    <description>Name of the field in the Community record that tells how many days to add from the work order start date</description>
    <inlineHelpText>Name of the field in the Community record that tells how many days to add from the work order start date</inlineHelpText>
    <label>Day Count Field Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>