force-app/main/default/objects/Work_Order_Trigger_Configuration__mdt/fields/Quality_Control_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Quality_Control_Record_Type__c</fullName>
    <description>Record Type Name</description>
    <inlineHelpText>Record Type Name</inlineHelpText>
    <label>Quality Control Record Type</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>